@@ -577,11 +577,12 @@ class FileBrowser(wx.GenericDirCtrl):
         """
         files = self.GetPaths()
         item = self._SCommand(self.GetPath)
-        print evt.GetEventType(), evt.GetKeyCode()
         if os.path.isdir(item):
             # Unlike Mac/Gtk, need to skip the event here to allow for
             # expanding paths with double clicks. This however disables the
-            # ability to use Return as a key for expanding.
+            # ability to use Return as a key for expanding. It also doesn't
+            # seem to be possible to tell whether the activation event was
+            # caused by a double click or a key sequence.
             if wx.Platform == '__WXMSW__':
                 evt.Skip()
             else:
